--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
     />
   </head>
   <body>
-    <!-- <header>
+    <header>
       <div>
         <img src="https://github.com/LucasSanro.png" alt="FotoGit" />
       </div>
-    </header> -->
+    </header>
     <main>
       <section>
         <div>
